# AutoMasterOS

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 002_add_stock_financial_modules.py  003_enhance_machines.py  004_os_avancada.py  005_faang_features.py  006_machine_client_isolation.py  007_fazenda_chassis.py  008_tenant_limite_tecnicos.py  009_auth_password_features.py  010_tenant_logo.py  011_client_portal.py  012_budget_signature.py  013_pix_key.py  014_partial_unique_tenant_document.py  015_deere_connections.py  016_deere_per_client.py  017_notifications.py  018_stock_item_id_on_os_items.py  e43a07aeceff_initial_schema.py
app/: main.py
app/core/: authorization.py  config.py  database.py  dependencies.py  (+4 more)
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  setup-tauri.ps1  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/assets/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/frontend/: index.html
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
scripts/: create_super_admin.py  init.sql
tests/: conftest.py  test_auth_temp.py  test_client_isolation.py  test_faang_features.py  test_financial.py  test_financial_rbac.py  test_limite_tecnicos.py  test_machines.py  test_orchestration.py  test_os_avancada.py  test_os_machines_integration.py  test_password_reset.py  test_rbac.py  test_reports.py  test_stock.py
(+140 files in other folders)
