[package]
name = "automaster"
version = "1.0.0"
description = "AutoMaster — Sistema de Gestão de Oficinas Agrícolas"
authors = ["AutoMaster"]
edition = "2021"

# Tauri exige que a lib esteja configurada assim
[lib]
name = "automaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
url                = "2"

# ── Offline / Sync ────────────────────────────────────────────────────────────
rusqlite  = { version = "0.31", features = ["bundled"] }   # SQLite embutido (sem dep. sistema)
reqwest   = { version = "0.12", features = ["json"] }      # HTTP async para sync com servidor
tokio     = { version = "1",    features = ["full"] }      # runtime async (exigido pelo reqwest)
chrono    = { version = "0.4",  features = ["serde"] }     # datas/timestamps

# Perfil de release otimizado (gera .exe menor e mais rápido)
[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
